strengthen server-side reservation validation